--- a/simple/lab.yaml
+++ b/simple/lab.yaml
@@ -3,7 +3,7 @@ name: simple
 vmm_pod:
     server: q-pod13-vmm.englab.juniper.net
     user: irzan
-    password: ^M1r#Z4n
+    password: <your_password>
     image:
         centos: centos80g.img
         ubuntu: ubuntu160406.img
