--- a/contrail/lab.yaml
+++ b/contrail/lab.yaml
@@ -3,7 +3,7 @@ name: contrail
 vmm_pod:
     server: q-pod08-vmm.englab.juniper.net
     user: irzan
-    password: ^M1r#Z4n
+    password: <your_password>
     image:
         centos: centos80g.img
         ubuntu: ubuntu100g.img
