--- a/contrail/config/leaf1.conf
+++ b/contrail/config/leaf1.conf
@@ -7,31 +7,8 @@ groups {
                 }
             }
         }
-        interfaces {
-            xe-0/0/0 {
-                unit 0 {
-                    family inet {
-                        address 172.16.12.11/31;
-                    }
-                }
-            }
-            xe-0/0/1 {
-                unit 0 {
-                    family inet {
-                        address 172.16.12.15/31;
-                    }
-                }
-            }
-            lo0 {
-                unit 0 {
-                    family inet {
-                        address 172.16.255.4/32;
-                    }
-                }
-            }
-        }
         routing-options {
-            router-id 172.16.255.4;
+            router-id 172.16.255.3;
             forwarding-table {
                 export pfe-ecmp;
             }
@@ -41,19 +18,16 @@ groups {
                 group underlay {
                     type external;
                     mtu-discovery;
+                    import bgp-ipclos-in;
                     export bgp-ipclos-out;
-                    local-as 65004;
-                    neighbor 172.16.12.10 {
+                    local-as 65003;
+                    neighbor 172.16.12.8 {
                         peer-as 65001;
                     }
-                    neighbor 172.16.12.14 {
+                    neighbor 172.16.12.12 {
                         peer-as 65002;
                     }
                 }
-            }
-            lldp {
-                interface xe-0/0/0;
-                interface xe-0/0/1;
             }
         }
         policy-options {
@@ -85,4 +59,4 @@ groups {
         }
     }
 }
-apply-groups underlay_ipfabric;
+apply-groups [ underlay_ipfabric ];
