--- a/contrail/config/leaf2.conf
+++ b/contrail/config/leaf2.conf
@@ -7,29 +7,6 @@ groups {
                 }
             }
         }
-        interfaces {
-            xe-0/0/0 {
-                unit 0 {
-                    family inet {
-                        address 172.16.12.11/31;
-                    }
-                }
-            }
-            xe-0/0/1 {
-                unit 0 {
-                    family inet {
-                        address 172.16.12.15/31;
-                    }
-                }
-            }
-            lo0 {
-                unit 0 {
-                    family inet {
-                        address 172.16.255.4/32;
-                    }
-                }
-            }
-        }
         routing-options {
             router-id 172.16.255.4;
             forwarding-table {
@@ -41,6 +18,7 @@ groups {
                 group underlay {
                     type external;
                     mtu-discovery;
+                    import bgp-ipclos-in;
                     export bgp-ipclos-out;
                     local-as 65004;
                     neighbor 172.16.12.10 {
@@ -50,10 +28,6 @@ groups {
                         peer-as 65002;
                     }
                 }
-            }
-            lldp {
-                interface xe-0/0/0;
-                interface xe-0/0/1;
             }
         }
         policy-options {
@@ -85,4 +59,4 @@ groups {
         }
     }
 }
-apply-groups underlay_ipfabric;
+apply-groups [ underlay_ipfabric ];
