--- a/contrail/config/spine1.conf
+++ b/contrail/config/spine1.conf
@@ -1,35 +1,5 @@
 groups {
     underlay_ipfabric {
-        interfaces {
-            xe-0/0/0 {
-                unit 0 {
-                    family inet {
-                        address 172.16.12.5/31;
-                    }
-                }
-            }
-            xe-0/0/1 {
-                unit 0 {
-                    family inet {
-                        address 172.16.12.8/31;
-                    }
-                }
-            }
-            xe-0/0/2 {
-                unit 0 {
-                    family inet {
-                        address 172.16.12.10/31;
-                    }
-                }
-            }
-            lo0 {
-                unit 0 {
-                    family inet {
-                        address 172.16.255.1/32;
-                    }
-                }
-            }
-        }
         routing-options {
             router-id 172.16.255.1;
             forwarding-table {
@@ -41,6 +11,7 @@ groups {
                 group underlay {
                     type external;
                     mtu-discovery;
+                    import bgp-ipclos-in;
                     export bgp-ipclos-out;
                     local-as 65001;
                     neighbor 172.16.12.4 {
@@ -53,11 +24,6 @@ groups {
                         peer-as 65004;
                     }
                 }
-            }
-            lldp {
-                interface xe-0/0/0;
-                interface xe-0/0/1;
-                interface xe-0/0/2;
             }
         }
         policy-options {
@@ -86,4 +52,4 @@ groups {
         }
     }
 }
-apply-groups underlay_ipfabric;
+apply-groups [ underlay_ipfabric ];
