--- a/contrail/config/spine2.conf
+++ b/contrail/config/spine2.conf
@@ -1,37 +1,7 @@
 groups {
     underlay_ipfabric {
-        interfaces {
-            xe-0/0/0 {
-                unit 0 {
-                    family inet {
-                        address 172.16.12.5/31;
-                    }
-                }
-            }
-            xe-0/0/1 {
-                unit 0 {
-                    family inet {
-                        address 172.16.12.8/31;
-                    }
-                }
-            }
-            xe-0/0/2 {
-                unit 0 {
-                    family inet {
-                        address 172.16.12.10/31;
-                    }
-                }
-            }
-            lo0 {
-                unit 0 {
-                    family inet {
-                        address 172.16.255.1/32;
-                    }
-                }
-            }
-        }
         routing-options {
-            router-id 172.16.255.1;
+            router-id 172.16.255.2;
             forwarding-table {
                 export pfe-ecmp;
             }
@@ -41,23 +11,19 @@ groups {
                 group underlay {
                     type external;
                     mtu-discovery;
+                    import bgp-ipclos-in;
                     export bgp-ipclos-out;
                     local-as 65001;
-                    neighbor 172.16.12.4 {
+                    neighbor 172.16.12.6 {
                         peer-as 65000;
                     }
-                    neighbor 172.16.12.9 {
+                    neighbor 172.16.12.13 {
                         peer-as 65003;
                     }
-                    neighbor 172.16.12.11 {
+                    neighbor 172.16.12.15 {
                         peer-as 65004;
                     }
                 }
-            }
-            lldp {
-                interface xe-0/0/0;
-                interface xe-0/0/1;
-                interface xe-0/0/2;
             }
         }
         policy-options {
@@ -86,4 +52,4 @@ groups {
         }
     }
 }
-apply-groups underlay_ipfabric;
+apply-groups [ underlay_ipfabric ];
