--- a/contrail/junos_config/old/leaf1.conf
+++ b/contrail/junos_config/old/leaf1.conf
@@ -11,27 +11,27 @@ groups {
             xe-0/0/0 {
                 unit 0 {
                     family inet {
-                        address 172.16.12.11/31;
+                        address 172.16.12.9/31;
                     }
                 }
             }
             xe-0/0/1 {
                 unit 0 {
                     family inet {
-                        address 172.16.12.15/31;
+                        address 172.16.12.13/31;
                     }
                 }
             }
             lo0 {
                 unit 0 {
                     family inet {
-                        address 172.16.255.4/32;
+                        address 172.16.255.3/32;
                     }
                 }
             }
         }
         routing-options {
-            router-id 172.16.255.4;
+            router-id 172.16.255.3;
             forwarding-table {
                 export pfe-ecmp;
             }
@@ -42,11 +42,11 @@ groups {
                     type external;
                     mtu-discovery;
                     export bgp-ipclos-out;
-                    local-as 65004;
-                    neighbor 172.16.12.10 {
+                    local-as 65003;
+                    neighbor 172.16.12.8 {
                         peer-as 65001;
                     }
-                    neighbor 172.16.12.14 {
+                    neighbor 172.16.12.12 {
                         peer-as 65002;
                     }
                 }
@@ -85,77 +85,4 @@ groups {
         }
     }
 }
-apply-groups [ underlay_ipfabric ];
-system {
-    host-name leaf2;
-    root-authentication {
-        encrypted-password "$1$vg8ol1YN$1N3T63u/NlCgJYsjhH7d./"; ## SECRET-DATA
-    }
-    login {
-        user admin {
-            class super-user;
-            authentication {
-                encrypted-password "$1$.4yUSZAi$peXi72wACx4SV.qAqOMYI."; ## SECRET-DATA
-            }
-        }
-    }
-    services {
-        ssh;
-        netconf {
-            ssh;
-        }
-    }
-    syslog {
-        user * {
-            any emergency;
-        }
-        file messages {
-            any notice;
-            authorization info;
-        }
-        file interactive-commands {
-            interactive-commands any;
-        }
-    }
-    extensions {
-        providers {
-            juniper {
-                license-type juniper deployment-scope commercial;
-            }
-            chef {
-                license-type juniper deployment-scope commercial;
-            }
-        }
-    }
-}
-interfaces {
-    em0 {
-        unit 0 {
-            family inet {
-                address 172.16.14.34/24;
-            }
-        }
-    }
-    em1 {
-        unit 0 {
-            family inet {
-                address 169.254.0.2/24;
-            }
-        }
-    }
-}
-forwarding-options {
-    storm-control-profiles default {
-        all;
-    }
-}
-protocols {
-    igmp-snooping {
-        vlan default;
-    }
-}
-vlans {
-    default {
-        vlan-id 1;
-    }
-}
+apply-groups underlay_ipfabric;
