--- a/contrail/junos_config/old/spine2.conf
+++ b/contrail/junos_config/old/spine2.conf
@@ -86,77 +86,4 @@ groups {
         }
     }
 }
-apply-groups [ underlay_ipfabric ];
-system {
-    host-name spine2;
-    root-authentication {
-        encrypted-password "$1$DUDzq2ll$6mdxtp06TWHTnzNdBVMmP0"; ## SECRET-DATA
-    }
-    login {
-        user admin {
-            class super-user;
-            authentication {
-                encrypted-password "$1$6lzkFr97$jy/i.pfVMRPlr3hGqrbLN1"; ## SECRET-DATA
-            }
-        }
-    }
-    services {
-        ssh;
-        netconf {
-            ssh;
-        }
-    }
-    syslog {
-        user * {
-            any emergency;
-        }
-        file messages {
-            any notice;
-            authorization info;
-        }
-        file interactive-commands {
-            interactive-commands any;
-        }
-    }
-    extensions {
-        providers {
-            juniper {
-                license-type juniper deployment-scope commercial;
-            }
-            chef {
-                license-type juniper deployment-scope commercial;
-            }
-        }
-    }
-}
-interfaces {
-    em0 {
-        unit 0 {
-            family inet {
-                address 172.16.14.32/24;
-            }
-        }
-    }
-    em1 {
-        unit 0 {
-            family inet {
-                address 169.254.0.2/24;
-            }
-        }
-    }
-}
-forwarding-options {
-    storm-control-profiles default {
-        all;
-    }
-}
-protocols {
-    igmp-snooping {
-        vlan default;
-    }
-}
-vlans {
-    default {
-        vlan-id 1;
-    }
-}
+apply-groups underlay_ipfabric;
