--- a/contrail/junos_config/spine1.conf
+++ b/contrail/junos_config/spine1.conf
@@ -86,4 +86,77 @@ groups {
         }
     }
 }
-apply-groups underlay_ipfabric;
+apply-groups [ underlay_ipfabric ];
+system {
+    host-name spine1;
+    root-authentication {
+        encrypted-password "$1$jIqnD5T8$8YN.cxnYzFGj1WjA2Tw.G1"; ## SECRET-DATA
+    }
+    login {
+        user admin {
+            class super-user;
+            authentication {
+                encrypted-password "$1$0Hdu9HKB$G66lS2cuX/zs8yo6LTu2x/"; ## SECRET-DATA
+            }
+        }
+    }
+    services {
+        ssh;
+        netconf {
+            ssh;
+        }
+    }
+    syslog {
+        user * {
+            any emergency;
+        }
+        file messages {
+            any notice;
+            authorization info;
+        }
+        file interactive-commands {
+            interactive-commands any;
+        }
+    }
+    extensions {
+        providers {
+            juniper {
+                license-type juniper deployment-scope commercial;
+            }
+            chef {
+                license-type juniper deployment-scope commercial;
+            }
+        }
+    }
+}
+interfaces {
+    em0 {
+        unit 0 {
+            family inet {
+                address 172.16.14.31/24;
+            }
+        }
+    }
+    em1 {
+        unit 0 {
+            family inet {
+                address 169.254.0.2/24;
+            }
+        }
+    }
+}
+forwarding-options {
+    storm-control-profiles default {
+        all;
+    }
+}
+protocols {
+    igmp-snooping {
+        vlan default;
+    }
+}
+vlans {
+    default {
+        vlan-id 1;
+    }
+}
