--- a/contrail/junos_config/leaf1.conf
+++ b/contrail/junos_config/leaf1.conf
@@ -85,4 +85,77 @@ groups {
         }
     }
 }
-apply-groups underlay_ipfabric;
+apply-groups [ underlay_ipfabric ];
+system {
+    host-name leaf1;
+    root-authentication {
+        encrypted-password "$1$CR66TLz5$d3vSqkU5.rkY878uLBQC61"; ## SECRET-DATA
+    }
+    login {
+        user admin {
+            class super-user;
+            authentication {
+                encrypted-password "$1$s5zCngYI$iYXx1wBJ2ALSjfPljGi.P1"; ## SECRET-DATA
+            }
+        }
+    }
+    services {
+        ssh;
+        netconf {
+            ssh;
+        }
+    }
+    syslog {
+        user * {
+            any emergency;
+        }
+        file messages {
+            any notice;
+            authorization info;
+        }
+        file interactive-commands {
+            interactive-commands any;
+        }
+    }
+    extensions {
+        providers {
+            juniper {
+                license-type juniper deployment-scope commercial;
+            }
+            chef {
+                license-type juniper deployment-scope commercial;
+            }
+        }
+    }
+}
+interfaces {
+    em0 {
+        unit 0 {
+            family inet {
+                address 172.16.14.33/24;
+            }
+        }
+    }
+    em1 {
+        unit 0 {
+            family inet {
+                address 169.254.0.2/24;
+            }
+        }
+    }
+}
+forwarding-options {
+    storm-control-profiles default {
+        all;
+    }
+}
+protocols {
+    igmp-snooping {
+        vlan default;
+    }
+}
+vlans {
+    default {
+        vlan-id 1;
+    }
+}
