--- a/contrail/junos_config/old/leaf2.conf
+++ b/contrail/junos_config/old/leaf2.conf
@@ -85,77 +85,4 @@ groups {
         }
     }
 }
-apply-groups [ underlay_ipfabric ];
-system {
-    host-name leaf2;
-    root-authentication {
-        encrypted-password "$1$vg8ol1YN$1N3T63u/NlCgJYsjhH7d./"; ## SECRET-DATA
-    }
-    login {
-        user admin {
-            class super-user;
-            authentication {
-                encrypted-password "$1$.4yUSZAi$peXi72wACx4SV.qAqOMYI."; ## SECRET-DATA
-            }
-        }
-    }
-    services {
-        ssh;
-        netconf {
-            ssh;
-        }
-    }
-    syslog {
-        user * {
-            any emergency;
-        }
-        file messages {
-            any notice;
-            authorization info;
-        }
-        file interactive-commands {
-            interactive-commands any;
-        }
-    }
-    extensions {
-        providers {
-            juniper {
-                license-type juniper deployment-scope commercial;
-            }
-            chef {
-                license-type juniper deployment-scope commercial;
-            }
-        }
-    }
-}
-interfaces {
-    em0 {
-        unit 0 {
-            family inet {
-                address 172.16.14.34/24;
-            }
-        }
-    }
-    em1 {
-        unit 0 {
-            family inet {
-                address 169.254.0.2/24;
-            }
-        }
-    }
-}
-forwarding-options {
-    storm-control-profiles default {
-        all;
-    }
-}
-protocols {
-    igmp-snooping {
-        vlan default;
-    }
-}
-vlans {
-    default {
-        vlan-id 1;
-    }
-}
+apply-groups underlay_ipfabric;
