--- a/contrail/junos_config/old/spine1.conf
+++ b/contrail/junos_config/old/spine1.conf
@@ -4,34 +4,34 @@ groups {
             xe-0/0/0 {
                 unit 0 {
                     family inet {
-                        address 172.16.12.7/31;
+                        address 172.16.12.5/31;
                     }
                 }
             }
             xe-0/0/1 {
                 unit 0 {
                     family inet {
-                        address 172.16.12.12/31;
+                        address 172.16.12.8/31;
                     }
                 }
             }
             xe-0/0/2 {
                 unit 0 {
                     family inet {
-                        address 172.16.12.14/31;
+                        address 172.16.12.10/31;
                     }
                 }
             }
             lo0 {
                 unit 0 {
                     family inet {
-                        address 172.16.255.2/32;
+                        address 172.16.255.1/32;
                     }
                 }
             }
         }
         routing-options {
-            router-id 172.16.255.2;
+            router-id 172.16.255.1;
             forwarding-table {
                 export pfe-ecmp;
             }
@@ -42,14 +42,14 @@ groups {
                     type external;
                     mtu-discovery;
                     export bgp-ipclos-out;
-                    local-as 65002;
-                    neighbor 172.16.12.6 {
+                    local-as 65001;
+                    neighbor 172.16.12.4 {
                         peer-as 65000;
                     }
-                    neighbor 172.16.12.13 {
+                    neighbor 172.16.12.9 {
                         peer-as 65003;
                     }
-                    neighbor 172.16.12.15 {
+                    neighbor 172.16.12.11 {
                         peer-as 65004;
                     }
                 }
@@ -86,77 +86,4 @@ groups {
         }
     }
 }
-apply-groups [ underlay_ipfabric ];
-system {
-    host-name spine2;
-    root-authentication {
-        encrypted-password "$1$DUDzq2ll$6mdxtp06TWHTnzNdBVMmP0"; ## SECRET-DATA
-    }
-    login {
-        user admin {
-            class super-user;
-            authentication {
-                encrypted-password "$1$6lzkFr97$jy/i.pfVMRPlr3hGqrbLN1"; ## SECRET-DATA
-            }
-        }
-    }
-    services {
-        ssh;
-        netconf {
-            ssh;
-        }
-    }
-    syslog {
-        user * {
-            any emergency;
-        }
-        file messages {
-            any notice;
-            authorization info;
-        }
-        file interactive-commands {
-            interactive-commands any;
-        }
-    }
-    extensions {
-        providers {
-            juniper {
-                license-type juniper deployment-scope commercial;
-            }
-            chef {
-                license-type juniper deployment-scope commercial;
-            }
-        }
-    }
-}
-interfaces {
-    em0 {
-        unit 0 {
-            family inet {
-                address 172.16.14.32/24;
-            }
-        }
-    }
-    em1 {
-        unit 0 {
-            family inet {
-                address 169.254.0.2/24;
-            }
-        }
-    }
-}
-forwarding-options {
-    storm-control-profiles default {
-        all;
-    }
-}
-protocols {
-    igmp-snooping {
-        vlan default;
-    }
-}
-vlans {
-    default {
-        vlan-id 1;
-    }
-}
+apply-groups underlay_ipfabric;
