--- a/contrail/contrail_config/instances.yaml
+++ b/contrail/contrail_config/instances.yaml
@@ -51,10 +51,10 @@ contrail_configuration:
   CONTRAIL_VERSION: 1910.23
   CLOUD_ORCHESTRATOR: openstack
   ENCAP_PRIORITY: VXLAN,MPLSoUDP,MPLSoGRE
-  UPGRADE_KERNEL: false
-  CONFIG_NODEMGR__DEFAULTS__minimum_diskGB: 2
-  DATABASE_NODEMGR__DEFAULTS__minimum_diskGB: 2
-  CONFIG_DATABASE_NODEMGR__DEFAULTS__minimum_diskGB: 2
+  UPGRADE_KERNEL: true
+  CONFIG_NODEMGR__DEFAULTS__minimum_diskGB: 10
+  DATABASE_NODEMGR__DEFAULTS__minimum_diskGB: 10
+  CONFIG_DATABASE_NODEMGR__DEFAULTS__minimum_diskGB: 10
   CONTROL_NODES: 172.16.11.10
   CONTROLLER_NODES: 172.16.11.10
   OPENSTACK_NODES: 172.16.11.10
