--- a/contrail/junos_config/site1.conf
+++ b/contrail/junos_config/site1.conf
@@ -35,7 +35,7 @@ groups {
             lo0 {
                 unit 0 {
                     family inet {
-                        address 172.16.255.0/32;
+                        address 172.16.255.10/32;
                     }
                 }
             }
@@ -78,7 +78,7 @@ groups {
             forwarding-table {
                 export pfe-ecmp;
             }
-            router-id 172.16.255.0;
+            router-id 172.16.255.10;
         }
         protocols {
             bgp {
@@ -86,15 +86,15 @@ groups {
                     type external;
                     mtu-discovery;
                     export bgp-ipclos-out;
-                    local-as 65000;
+                    local-as 65010;
                     neighbor 172.16.12.5 {
-                        peer-as 65001;
+                        peer-as 65011;
                     }
                     neighbor 172.16.12.7 {
-                        peer-as 65002;
+                        peer-as 65012;
                     }
                     neighbor 172.16.12.2 {
-                        peer-as 65010;
+                        peer-as 65100;
                     }
                 }
             }
@@ -107,7 +107,7 @@ groups {
 }
 apply-groups [ underlay_ipfabric ];
 system {
-    host-name sdngw;
+    host-name site1;
     root-authentication {
         encrypted-password "$1$JF4hgVtm$ZVIN3BgpkHGu1YFLoKt3o."; ## SECRET-DATA
     }
