--- a/contrail/junos_config/site1leaf1.conf
+++ b/contrail/junos_config/site1leaf1.conf
@@ -11,27 +11,27 @@ groups {
             xe-0/0/0 {
                 unit 0 {
                     family inet {
-                        address 172.16.12.11/31;
+                        address 172.16.12.9/31;
                     }
                 }
             }
             xe-0/0/1 {
                 unit 0 {
                     family inet {
-                        address 172.16.12.15/31;
+                        address 172.16.12.13/31;
                     }
                 }
             }
             lo0 {
                 unit 0 {
                     family inet {
-                        address 172.16.255.4/32;
+                        address 172.16.255.13/32;
                     }
                 }
             }
         }
         routing-options {
-            router-id 172.16.255.4;
+            router-id 172.16.255.13;
             forwarding-table {
                 export pfe-ecmp;
             }
@@ -42,12 +42,12 @@ groups {
                     type external;
                     mtu-discovery;
                     export bgp-ipclos-out;
-                    local-as 65004;
-                    neighbor 172.16.12.10 {
-                        peer-as 65001;
+                    local-as 65013;
+                    neighbor 172.16.12.8 {
+                        peer-as 65011;
                     }
-                    neighbor 172.16.12.14 {
-                        peer-as 65002;
+                    neighbor 172.16.12.12 {
+                        peer-as 65012;
                     }
                 }
             }
@@ -87,15 +87,15 @@ groups {
 }
 apply-groups [ underlay_ipfabric ];
 system {
-    host-name leaf2;
+    host-name site1leaf1;
     root-authentication {
-        encrypted-password "$1$vg8ol1YN$1N3T63u/NlCgJYsjhH7d./"; ## SECRET-DATA
+        encrypted-password "$1$CR66TLz5$d3vSqkU5.rkY878uLBQC61"; ## SECRET-DATA
     }
     login {
         user admin {
             class super-user;
             authentication {
-                encrypted-password "$1$.4yUSZAi$peXi72wACx4SV.qAqOMYI."; ## SECRET-DATA
+                encrypted-password "$1$s5zCngYI$iYXx1wBJ2ALSjfPljGi.P1"; ## SECRET-DATA
             }
         }
     }
@@ -132,7 +132,7 @@ interfaces {
     em0 {
         unit 0 {
             family inet {
-                address 172.16.14.34/24;
+                address 172.16.14.33/24;
             }
         }
     }
