--- a/contrail/junos_config/site1spine1.conf
+++ b/contrail/junos_config/site1spine1.conf
@@ -25,13 +25,13 @@ groups {
             lo0 {
                 unit 0 {
                     family inet {
-                        address 172.16.255.1/32;
+                        address 172.16.255.11/32;
                     }
                 }
             }
         }
         routing-options {
-            router-id 172.16.255.1;
+            router-id 172.16.255.11;
             forwarding-table {
                 export pfe-ecmp;
             }
@@ -42,15 +42,15 @@ groups {
                     type external;
                     mtu-discovery;
                     export bgp-ipclos-out;
-                    local-as 65001;
+                    local-as 65011;
                     neighbor 172.16.12.4 {
-                        peer-as 65000;
+                        peer-as 65010;
                     }
                     neighbor 172.16.12.9 {
-                        peer-as 65003;
+                        peer-as 65013;
                     }
                     neighbor 172.16.12.11 {
-                        peer-as 65004;
+                        peer-as 65014;
                     }
                 }
             }
@@ -88,7 +88,7 @@ groups {
 }
 apply-groups [ underlay_ipfabric ];
 system {
-    host-name spine1;
+    host-name site1spine1;
     root-authentication {
         encrypted-password "$1$jIqnD5T8$8YN.cxnYzFGj1WjA2Tw.G1"; ## SECRET-DATA
     }
