--- a/contrail/junos_config/site1spine2.conf
+++ b/contrail/junos_config/site1spine2.conf
@@ -1,37 +1,37 @@
 groups {
     underlay_ipfabric {
-        chassis {
-            aggregated-devices {
-                ethernet {
-                    device-count 4;
-                }
-            }
-        }
         interfaces {
             xe-0/0/0 {
                 unit 0 {
                     family inet {
-                        address 172.16.12.9/31;
+                        address 172.16.12.7/31;
                     }
                 }
             }
             xe-0/0/1 {
                 unit 0 {
                     family inet {
-                        address 172.16.12.13/31;
+                        address 172.16.12.12/31;
+                    }
+                }
+            }
+            xe-0/0/2 {
+                unit 0 {
+                    family inet {
+                        address 172.16.12.14/31;
                     }
                 }
             }
             lo0 {
                 unit 0 {
                     family inet {
-                        address 172.16.255.3/32;
+                        address 172.16.255.12/32;
                     }
                 }
             }
         }
         routing-options {
-            router-id 172.16.255.3;
+            router-id 172.16.255.12;
             forwarding-table {
                 export pfe-ecmp;
             }
@@ -42,18 +42,22 @@ groups {
                     type external;
                     mtu-discovery;
                     export bgp-ipclos-out;
-                    local-as 65003;
-                    neighbor 172.16.12.8 {
-                        peer-as 65001;
+                    local-as 65012;
+                    neighbor 172.16.12.6 {
+                        peer-as 65010;
                     }
-                    neighbor 172.16.12.12 {
-                        peer-as 65002;
+                    neighbor 172.16.12.13 {
+                        peer-as 65013;
+                    }
+                    neighbor 172.16.12.15 {
+                        peer-as 65014;
                     }
                 }
             }
             lldp {
                 interface xe-0/0/0;
                 interface xe-0/0/1;
+                interface xe-0/0/2;
             }
         }
         policy-options {
@@ -73,9 +77,6 @@ groups {
                     }
                     then accept;
                 }
-                term reject {
-                    then reject;
-                }
             }
             policy-statement pfe-ecmp {
                 then {
@@ -87,15 +88,15 @@ groups {
 }
 apply-groups [ underlay_ipfabric ];
 system {
-    host-name leaf1;
+    host-name site1spine2;
     root-authentication {
-        encrypted-password "$1$CR66TLz5$d3vSqkU5.rkY878uLBQC61"; ## SECRET-DATA
+        encrypted-password "$1$DUDzq2ll$6mdxtp06TWHTnzNdBVMmP0"; ## SECRET-DATA
     }
     login {
         user admin {
             class super-user;
             authentication {
-                encrypted-password "$1$s5zCngYI$iYXx1wBJ2ALSjfPljGi.P1"; ## SECRET-DATA
+                encrypted-password "$1$6lzkFr97$jy/i.pfVMRPlr3hGqrbLN1"; ## SECRET-DATA
             }
         }
     }
@@ -132,7 +133,7 @@ interfaces {
     em0 {
         unit 0 {
             family inet {
-                address 172.16.14.33/24;
+                address 172.16.14.32/24;
             }
         }
     }
