--- a/contrail/junos_config/site2leaf1.conf
+++ b/contrail/junos_config/site2leaf1.conf
@@ -4,34 +4,27 @@ groups {
             xe-0/0/0 {
                 unit 0 {
                     family inet {
-                        address 172.16.12.7/31;
+                        address 172.16.22.7/31;
                     }
                 }
             }
             xe-0/0/1 {
                 unit 0 {
                     family inet {
-                        address 172.16.12.12/31;
-                    }
-                }
-            }
-            xe-0/0/2 {
-                unit 0 {
-                    family inet {
-                        address 172.16.12.14/31;
+                        address 172.16.22.9/31;
                     }
                 }
             }
             lo0 {
                 unit 0 {
                     family inet {
-                        address 172.16.255.2/32;
+                        address 172.16.255.22/32;
                     }
                 }
             }
         }
         routing-options {
-            router-id 172.16.255.2;
+            router-id 172.16.255.22;
             forwarding-table {
                 export pfe-ecmp;
             }
@@ -42,22 +35,18 @@ groups {
                     type external;
                     mtu-discovery;
                     export bgp-ipclos-out;
-                    local-as 65002;
-                    neighbor 172.16.12.6 {
-                        peer-as 65000;
+                    local-as 65022;
+                    neighbor 172.16.22.6 {
+                        peer-as 65021;
                     }
-                    neighbor 172.16.12.13 {
-                        peer-as 65003;
-                    }
-                    neighbor 172.16.12.15 {
-                        peer-as 65004;
+                    neighbor 172.16.22.8 {
+                        peer-as 65021;
                     }
                 }
             }
             lldp {
                 interface xe-0/0/0;
                 interface xe-0/0/1;
-                interface xe-0/0/2;
             }
         }
         policy-options {
@@ -88,15 +77,15 @@ groups {
 }
 apply-groups [ underlay_ipfabric ];
 system {
-    host-name spine2;
+    host-name site2leaf1;
     root-authentication {
-        encrypted-password "$1$DUDzq2ll$6mdxtp06TWHTnzNdBVMmP0"; ## SECRET-DATA
+        encrypted-password "$1$jIqnD5T8$8YN.cxnYzFGj1WjA2Tw.G1"; ## SECRET-DATA
     }
     login {
         user admin {
             class super-user;
             authentication {
-                encrypted-password "$1$6lzkFr97$jy/i.pfVMRPlr3hGqrbLN1"; ## SECRET-DATA
+                encrypted-password "$1$0Hdu9HKB$G66lS2cuX/zs8yo6LTu2x/"; ## SECRET-DATA
             }
         }
     }
@@ -133,7 +122,7 @@ interfaces {
     em0 {
         unit 0 {
             family inet {
-                address 172.16.14.32/24;
+                address 172.16.14.37/24;
             }
         }
     }
